--- a/QuizAPI/appsettings.json
+++ b/QuizAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server=(local)\\mssqlserver;Database=QuizDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
+//mssqlserver est le nom sur cet ordi. Verif poss windows+r, taper services.msc et chercher sql server qui provide storage etc 
